@@ -183,7 +183,8 @@ extern void  checkret A_((char **, int));
 extern char *get_job_envvar A_((job *, char *));
 extern int   mom_open_socket_to_jobs_server A_((job* pjob, char *id, void (*message_hander) A_((int))));
 extern int   kill_service_task(task *, int sig);
-extern void  stop_service_job(job *);
+extern int   stop_service_job(job *);
+extern int   is_service_job(job *);
 
 /* defined in mach-dependant mom_mach.c */
 extern int kill_task A_((struct task *, int, int));
